implement unit test on the domain layer